feat: implement lesson, authentication, and enrollment controllers and services